yanl/examples/t1/fail/not_invalid_2.yanl
# Nu e voie cu operator unar intre 2 operanzi

program dude;
var x,y:boolean;
begin
   if (x not y)
			  writestring("not ok");
end.